Make Ingestion server tests on PyrisLectureIngestionTest